--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "keymirror": "0.1.1",
     "lodash.bindall": "4.4.0",
     "lodash.debounce": "4.0.8",
-    "lodash.defaultsdeep": "4.6.0",
+    "lodash.defaultsdeep": "^4.6.1",
     "lodash.isequal": "4.5.0",
     "lodash.omit": "4.5.0",
     "lodash.pick": "4.4.0",
@@ -109,13 +109,12 @@
     "redux-throttle": "0.1.1",
     "rimraf": "^2.6.1",
     "scratch-audio": "0.1.0-prerelease.20190925183642",
-    "scratch-l10n": "3.6.20191120161253",
     "scratch-blocks": "0.1.0-prerelease.1574180945",
+    "scratch-l10n": "3.6.20191120161253",
     "scratch-paint": "0.2.0-prerelease.20191114200704",
     "scratch-render": "0.1.0-prerelease.20191106204814",
     "scratch-storage": "1.3.2",
     "scratch-svg-renderer": "0.2.0-prerelease.20191104164753",
-    "scratch-vm": "0.2.0-prerelease.20191119203901",
     "selenium-webdriver": "3.6.0",
     "startaudiocontext": "1.2.1",
     "style-loader": "^0.23.0",
@@ -142,5 +141,8 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/test/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/test/__mocks__/styleMock.js"
     }
+  },
+  "dependencies": {
+    "scratch-vm": "github:gonhainu/scratch-vm#feature/mabeee_extension"
   }
 }
